Adjust layout to avoid horizontal scrollbar on Firefox (#9)

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,4 +1,4 @@
-.gif-modal .gif-box {
+.gif-modal .gif-content {
   min-width: 650px;
   max-height: 420px;
 }
